feat: Place 좋아요 토글 API, Magazine 좋아요 토글 API 추가